neviem preco to nejde

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <input type="submit" class="registerbtn" value="Register">
         </div>
         <p class="no-info">We'll never share your information without your permission</p>
+        <p>dddd</p>
     </section>
 </body>
 </html>
