skusam este raz

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
         </div>
         <p class="no-info">We'll never share your information without your permission</p>
         <p>dddd</p>
+        <p>ddgggg
+        </p>
     </section>
 </body>
 </html>
